src/objects/inscor__Work_Order_Material__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipName>Work_Order_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipName>Work_Order_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>inscor__Invoice_Line__c</referenceTo>
        <relationshipName>Material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Material_Type__c</fullName>
        <label>Material Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rotable</fullName>
                </value>
                <value>
                    <fullName>Expendable</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Work_Order_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Price</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Invoiced__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Issued__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <label>Work Order Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipName>Material</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Work Order Material</label>
    <nameField>
        <displayFormat>WOMID-{0}</displayFormat>
        <label>WO Material ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Can_not_be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Quantity_Allocated__c &lt; 0</errorConditionFormula>
        <errorDisplayField>inscor__Quantity_Allocated__c</errorDisplayField>
        <errorMessage>Quantity Allocated cannot be Negative</errorMessage>
    </validationRules>
</CustomObject>